--- a/src/Server/Pages/_ViewImports.cshtml
+++ b/src/Server/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using traction_sample
-@namespace traction_sample.Pages
+@using Server
+@namespace Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
